# archiver

./: .gitmodules  .pre-commit-config.yaml  .testenv-beta-ci.yml  .testenv-ci.yml  README.md  SCORE.md  SETUP.md  build.docker  run_linter.sh  testenv.docker
deadlines/: ami.yml  pmi.yml
tasks/admission/: admission.cpp
tasks/archiver/src/: CMakeLists.txt  archiver.cpp  decode.cpp  decode.h  decoder.cpp  decoder.h  encode.cpp  encode.h  huffman.cpp  huffman.h  utility.cpp  utility.h
tasks/archiver/src/models/: ArchiverArgs.cpp  ArchiverArgs.h  LaunchArgs.cpp  LaunchArgs.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h  Treap.cpp  Treap.h
tasks/archiver/src/models/exceptions/: FileExceptions.cpp  FileExceptions.h  LaunchArgsExceptions.cpp  LaunchArgsExceptions.h
tasks/archiver/tests/: CMakeLists.txt  argsTest.cpp  huffmanTest.cpp  readerTest.cpp  treapTest.cpp  (+1 more)
tasks/chocolate/: chocolate.cpp
tasks/defer/: defer.h
tasks/fibonacci/: fibonacci.cpp
tasks/is_leap/: is_leap.cpp
tasks/min_divisor/: min_divisor.cpp
tasks/multiplication/: multiplication.cpp  readme.md
tasks/next_even/: next_even.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/provinces/: provinces.cpp  provinces.h
tasks/queue/: queue.cpp
tasks/rational/: rational.cpp
tasks/reduce_fraction/: reduce_fraction.cpp
tasks/scorer/: readme.md  scorer.cpp
tasks/search/: search.cpp
tasks/sort_students/: sort_students.cpp  sort_students.h
tasks/stack/: stack.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
