set(CMAKE_CXX_STANDARD 20)
add_executable(
        archiver
        archiver.cpp
        models/ArchiverArgs.h
        models/ArchiverArgs.cpp
        models/exceptions/LaunchArgsExceptions.h
        models/exceptions/LaunchArgsExceptions.cpp
        models/LaunchArgs.cpp
        models/LaunchArgs.h
        models/StreamReader.cpp
        models/StreamReader.h
        models/exceptions/FileExceptions.cpp
        models/exceptions/FileExceptions.h
        utility.cpp
        utility.h
        models/StreamWriter.cpp
        models/StreamWriter.h
        models/StreamWriter.cpp
        ../tests/writerTest.cpp
)
